--- a/body.tex
+++ b/body.tex
@@ -10,7 +10,8 @@ and \inlinecode{LaTeX}.
 
 When you export your Jupyter Lab file into a \LaTeX file,
 you'll see a lot of preambles on the top. These preambles
-are what makes the code cells the way they do. You don't
+are what makes the code cells look 
+the way they do. You don't
 need to copy any of those preambles because they have already
 been cloned into \inlinecode{coding.tex} and are
 automatically loaded by \inlinecode{main.tex}. 
@@ -38,6 +39,9 @@ Hello world
 \noindent You can insert inline code with
 \inlinecode{\\inlinecode\{...\}}.
 
+
+
+\newpage
 % ----------------------------- %
 % Author Guidelines
 % ----------------------------- %
