--- a/body.tex
+++ b/body.tex
@@ -17,7 +17,7 @@ been cloned into \inlinecode{coding.tex} and are
 automatically loaded by \inlinecode{main.tex}. 
 Anyway, skip to the bottom of the exported file, where
 your code parts are. Your codes will start with
-\inlinecode{\\begin\{tcolorbox\}} and end with \inlinecode{\\end\{tcolorbox\}}.
+\inlinecode{\\begin\{tcolorbox\}} and end with \inlinecode{\\end\{Verbatim\}}.
 
 Copy and paste these into anywhere on \inlinecode{body.tex}.
 Now, when you compile \inlinecode{main.tex}, every content
