--- a/body.tex
+++ b/body.tex
@@ -37,7 +37,7 @@ Hello world
 
 \section*{Inserting Inline Codes}
 \noindent You can insert inline code with
-\inlinecode{\\inlinecode\{...\}}.
+\inlinecode{\textbackslash{}inlinecode\{...\}}.
 
 
 
