--- a/coding.tex
+++ b/coding.tex
@@ -20,7 +20,8 @@
 %     :  
 %     :  Set the font family of the code cells
 %     :  to 'DejaVuSansMono' by changing the
-%     :  two values under '\ifPDFTeX' to %     :  %     :  '\usepackage{DejaVuSansMono}'
+%     :  two values under '\ifPDFTeX' to 
+%     :  '\usepackage{DejaVuSansMono}'
 %     :  
 %     :  The code box's size was shifted funny,
 %     :  so I switched the vertical value from
@@ -42,9 +43,7 @@
 %     :  by going to my terminal and typing
 %     :  'pdflatex main.tex'
 %     :  
-%     :  So, how do I actually use this?
-%     :  I write main document on my .tex file.
-%     :  Then, whenever I need to insert code
+%     :  Whenever I need to insert code
 %     :  snippets into my paper, I press
 %     :  'file' and then 
 %     :  'Save and Export Notebook As' 'LaTeX'
@@ -52,7 +51,7 @@
 %     :  copy the code part into 'body.tex'
 %     :  FYI, the code part starts with
 %     :  '\begin{tcolorbox}' and ends with
-%     :  '\end{tcolorbox}'
+%     :  '\end{Verbatim}'
 % ++++++++++++++++++++++++++++++++++++++++++++++++
 
 
